// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Local {
  id               Int               @id @default(autoincrement())
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  name             String            @unique
  nickname         String?
  ein              String            @unique
  email            String
  phone            String?
  localTypeId      Int
  localType        LocalType         @relation(fields: [localTypeId], references: [id], onDelete: Restrict)
  localInformation LocalInformation?
  gates            Gate[]
  events           Event[]
}

model LocalType {
  id     Int     @id @default(autoincrement())
  name   String  @unique
  locals Local[]
}

model LocalInformation {
  id         Int      @id @default(autoincrement())
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  zipCode    String
  city       String
  state      String
  address    String
  complement String?
  localId    Int      @unique
  local      Local    @relation(fields: [localId], references: [id], onDelete: Cascade)

  @@unique([zipCode, city, state, address, complement])
}

model Gate {
  id           Int     @id @default(autoincrement())
  name         String
  localId      Int
  isTicketGate Boolean
  local        Local   @relation(fields: [localId], references: [id], onDelete: Cascade)

  @@unique([name, isTicketGate, localId])
}

model Event {
  id          Int       @id @default(autoincrement())
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  name        String
  eventTypeId Int
  eventDate   DateTime
  eventTime   String
  localId     Int
  email       String
  phone       String?
  local       Local     @relation(fields: [localId], references: [id], onDelete: Cascade)
  eventType   EventType @relation(fields: [eventTypeId], references: [id], onDelete: Restrict)

  @@unique([eventDate, eventTime, localId])
}

model EventType {
  id     Int     @id @default(autoincrement())
  name   String  @unique
  events Event[]
}
